<resources>
    <string name="app_name">小Q出行</string>
    <string name="login_title">Hey , 小Q</string>
    <string name="tel">Tel</string>
    <string name="password">Password</string>
    <string name="forget">忘记密码</string>
    <string name="register">新用户注册</string>
    <string name="remember">记</string>
    <string name="register_gesture_password">请输入你的手势密码</string>
    <string name="forget_gesture_password">请验证你的手势密码</string>
    <string name="btn_login">登录</string>
</resources>
