<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_root"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/x16"
    android:paddingRight="@dimen/x16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/x70"
            android:layout_height="@dimen/x60"
            android:background="@mipmap/logo_login" />

        <TextView
            android:id="@+id/tx_login_title"
            android:layout_width="@dimen/x90"
            android:layout_height="@dimen/x30"
            android:layout_marginLeft="@dimen/x10"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/yellow"
            android:textSize="@dimen/x20" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y160"
        android:id="@+id/login_space"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="@dimen/x90"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical|left"
            android:id="@+id/btn_forgetPassword"
            android:text="@string/forget"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical|right"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</LinearLayout>
